# resume-frontend

./: .dockerignore  .env  .env.example  .gitattributes  .gitignore  AWS_DEPLOYMENT.md  Dockerfile.backend  Dockerfile.frontend  Dockerfile.nginx  README.md  add_gap_analysis_columns.sql  auth_middleware.py  auth_models.py  auth_server.py  auth_service.py  components.json  config.py  deploy.sh  design.md  designDark.md  docker-compose.yml  docker-compose.yml.ec2  false.yaml  fastapi_backend.py  final_fastapi_server.py  main.py  main_server_with_auth.py  minimal_backend.py  nginx.conf  package-lock.json  package.json  pyproject.toml  requirements.txt  review.py  reviewCall.py  sample.yaml  server.py  simple_fastapi_backend.py  simple_revamp_server.py  start-backend.sh  (+7 more)
.next/: app-build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  routes-manifest.json  trace
.next/cache/: .tsbuildinfo
.next/server/: _error.js  app-paths-manifest.json  server-reference-manifest.json  webpack-runtime.js
.next/standalone/: .env  server.js
config/: agents.yaml  resume.yaml  tasks.yaml  template.yaml
config/designs/: classicDesign.yaml  engineeringClassic.yaml  engineeringDesign.yaml  modernDesign.yaml  sb2novDesign.yaml
fastapi-server/: main.py  requirements.txt  setup.py
src/app/: globals.css  layout.tsx  page.tsx
src/components/: ATSAnalysisModal.tsx  AnalysisLoadingScreen.tsx  EditorSidebar.tsx  GapAnalysisResults.tsx  Hyperspeed.jsx  JobMonitor.tsx  MarkdownRenderer.tsx  NewResumeModal.tsx  PrismaticBurst.tsx  (+1 more)
temp/: resume.yaml  test.yaml
(+1241 files in other folders)
