[project]
name = "resumefrontend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.177.0",
    "google-genai>=1.33.0",
    "googlesearch-python>=1.3.0",
    "jose>=1.0.0",
    "passlib>=1.7.4",
    "pycountry>=24.6.1",
    "pydantic[email]>=2.11.7",
    "python-jose>=3.5.0",
]
